add /dashboard/company/quotes/{quoteId}/finalize for setting final quote price